Support sudo for copying crl to openvpn directory.

--- a/config/scripts.conf
+++ b/config/scripts.conf
@@ -15,3 +15,6 @@ SSH_SERVER_KEY=""
 ## OpenVPN settings
 OPENVPN_DIR="/etc/openvpn"
 OPENVPN_CMD="/etc/init.d/openvpn restart"
+
+## Local server settings
+COPY_USER=""
