Use sudo to restart openvpn

--- a/config/scripts.conf
+++ b/config/scripts.conf
@@ -14,7 +14,7 @@ SSH_SERVER_KEY=""
 
 ## OpenVPN settings
 OPENVPN_DIR="/etc/openvpn"
-OPENVPN_CMD="/etc/init.d/openvpn restart"
+OPENVPN_CMD="sudo /etc/init.d/openvpn restart"
 
 ## Local server settings
 COPY_USER=""
